tests/error/subtractInteger-wrong-1st-argument-unit.uplc
(program 1.0.0[[(builtin subtractInteger)(con unit ())](con integer 10)])